Web Inspector: New Tab contents have extra vertical spacing when wrapped https://bugs.webkit.org/show_bug.cgi?id=172530
Reviewed by Joseph Pecoraro.

* UserInterface/Views/NewTabContentView.css:
(.new-tab.tab.content-view):


Canonical link: https://commits.webkit.org/189557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217503 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/NewTabContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NewTabContentView.css
@@ -27,6 +27,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    align-content: center;
     align-items: center;
 
     background-color: hsl(0, 0%, 96%);
